--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script type="text/javascript" src="main.js"></script>
 </head>
-<body>
+<body id="body">
 
 </body>
 </html>
